build: clean Shadow and SQLite test warnings